solutions/qr-code-component/styles.css
:root {
  --white: hsl(0, 0%, 100%);
  --slate-300: hsl(212, 45%, 89%);
  --slate-500: hsl(216, 15%, 48%);
  --slate-900: hsl(218, 44%, 22%);
}

* {
  margin: 0;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background-color: var(--slate-300);
  font-family: "Outfit", sans-serif;
  font-size: 0.85em;
}

.qr-card {
  background-color: var(--white);
  max-width: 17rem;
  width: 80%;
  padding: 1em;
  border-radius: 1.25em;
}

.qr-code {
  width: 100%;
  border-radius: 0.5em;
}

.qr-info {
  margin: 1.25rem;
  text-align: center;
}

.qr-tag {
  font-size: 1.5em;
  font-weight: 700;
  margin-bottom: 1rem;
}

.qr-description {
  color: var(--slate-500);
}

.home {
  position: absolute;
  bottom: 0.5rem;
  right: 0.5rem;
}

.home img {
  width: 20px;
  transition: transform 300ms;
  transform-origin: bottom right;
}

.home img:hover {
  transform: scale(2);
}

.attribution {
  padding: 0.5em;
  font-size: 0.6rem;
  text-align: center;
}

.attribution a {
  color: var(--slate-900);
}

